force-app/main/default/objects/Order_Placed__e/Order_Placed__e.object-meta.xml
<CustomObject>
    <label>Order Placed</label>
    <pluralLabel>Order Placed Events</pluralLabel>
</CustomObject>