force-app/main/default/objects/Order_Placed__e/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName><label>Customer ID</label><type>Text</type><length>18</length>
</CustomField>