force-app/main/default/objects/Order_Placed__e/fields/Restaurant_Id__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Id__c</fullName><label>Restaurant ID</label><type>Text</type><length>18</length>
</CustomField>