force-app/main/default/objects/Order_Placed__e/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName><label>Total</label><type>Number</type><precision>16</precision><scale>2</scale>
</CustomField>